Add box for Switzerland on intersect, review content

--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,16 @@
     <meta name="twitter:site" content="@nadineprigann" />
     <meta name="twitter:creator" content="@nadineprigann" />
 
-    <meta property="og:url" content="https://nostalgic-spence-861716.netlify.com" />
+    <meta property="og:url" content="https://crimson-to-salmon.interactivethings.io/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="From Crimson To Salmon" />
     <meta
       property="og:image"
-      content="https://nostalgic-spence-861716.netlify.compublic/sharing/ixt_sharing_landscape.png"
+      content="https://crimson-to-salmon.interactivethings.io/static/ixt_sharing_landscape.png"
     />
     <meta
       property="og:description"
-      content="This data story explores the consequences of air pollution to the evening sky."
+      content="A data story exploring the correlation between air pollution and evening sky colors. Is Switzerland really as salmon as we think?"
     />
     <!--
       manifest.json provides metadata used when your web app is added to the
