Update OG Description

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       property="og:description"
-      content="A data story exploring the correlation between air pollution and evening sky colors. Is Switzerland really as salmon as we think?"
+      content="An exploration of the correlation between air pollution and the sky’s color at sunset." 
     />
     <!--
       manifest.json provides metadata used when your web app is added to the
