--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
     <meta name="twitter:site" content="@nadineprigann" />
     <meta name="twitter:creator" content="@nadineprigann" />
 
-    <meta property="og:url" content="https://crimson-to-salmon.interactivethings.io/" />
+    <meta property="og:url" content="https://nostalgic-spence-861716.netlify.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="From Crimson To Salmon" />
     <meta
       property="og:image"
-      content="https://crimson-to-salmon.interactivethings.io/static/ixt_sharing_landscape.png"
+      content="https://nostalgic-spence-861716.netlify.com/public/sharing/ixt_sharing_landscape.png"
     />
     <meta
       property="og:description"
