--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=800" />
+    <meta name="theme-color" content="#000000" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@nadineprigann" />
-    <meta name="twitter:creator" content="@nadineprigann" />
+    <meta name="twitter:site" content="@ixt" />
+    <meta name="twitter:creator" content="@ixt" />
 
-    <meta property="og:url" content="https://nostalgic-spence-861716.netlify.com/" />
+    <meta
+      property="og:url"
+      content="https://nostalgic-spence-861716.netlify.com/"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="From Crimson To Salmon" />
     <meta
@@ -18,15 +21,18 @@
     />
     <meta
       property="og:description"
-      content="An exploration of the correlation between air pollution and the sky’s color at sunset." 
+      content="An exploration of the correlation between air pollution and the sky’s color at sunset."
     />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:500,700" rel="stylesheet"> 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:500,700"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -37,32 +43,100 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicon/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="favicon/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="favicon/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="favicon/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="favicon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicon/apple-touch-icon-152x152.png" />
-    <link rel="icon" type="image/png" href="favicon/favicon-196x196.png" sizes="196x196" />
-    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="favicon/favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="&nbsp;"/>
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="57x57"
+      href="favicon/apple-touch-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="114x114"
+      href="favicon/apple-touch-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="72x72"
+      href="favicon/apple-touch-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="144x144"
+      href="favicon/apple-touch-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="60x60"
+      href="favicon/apple-touch-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="120x120"
+      href="favicon/apple-touch-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="76x76"
+      href="favicon/apple-touch-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="152x152"
+      href="favicon/apple-touch-icon-152x152.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-196x196.png"
+      sizes="196x196"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-16x16.png"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-128.png"
+      sizes="128x128"
+    />
+    <meta name="application-name" content="&nbsp;" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
-    <meta name="msapplication-square70x70logo" content="favicon/mstile-70x70.png" />
-    <meta name="msapplication-square150x150logo" content="favicon/mstile-150x150.png" />
-    <meta name="msapplication-wide310x150logo" content="favicon/mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="favicon/mstile-310x310.png" />
-   
+    <meta
+      name="msapplication-square70x70logo"
+      content="favicon/mstile-70x70.png"
+    />
+    <meta
+      name="msapplication-square150x150logo"
+      content="favicon/mstile-150x150.png"
+    />
+    <meta
+      name="msapplication-wide310x150logo"
+      content="favicon/mstile-310x150.png"
+    />
+    <meta
+      name="msapplication-square310x310logo"
+      content="favicon/mstile-310x310.png"
+    />
+
     <title>From Crimson To Salmon</title>
   </head>
   <body>
-    <noscript>
-    </noscript>
+    <noscript> </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
