Try to parameterize OG URLs

--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,12 @@
     <meta name="twitter:site" content="@ixt" />
     <meta name="twitter:creator" content="@ixt" />
 
-    <meta
-      property="og:url"
-      content="https://nostalgic-spence-861716.netlify.com/"
-    />
+    <meta property="og:url" content="%PUBLIC_URL%/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="From Crimson To Salmon" />
     <meta
       property="og:image"
-      content="https://nostalgic-spence-861716.netlify.com/sharing/cts_sharing_landscape.png"
+      content="%PUBLIC_URL%/sharing/cts_sharing_landscape.png"
     />
     <meta
       property="og:description"
